Ported to forge (except the blocks, will fix later)